--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   <a 
-  href= Absolute Path (external link)
+  href= "https://www.google.co.uk/"> Absolute Path </a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
-  Relative Path (internal link)
+  <a 
+  href= "about.html">Relative Path</a>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <a 
+  href= <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" _blank alt="a lion">
 
 </body>
 </html>
