--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
   <a 
-  href= <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" _blank alt="a lion">
+  href= <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" target="_blank" alt="a lion">
 
 </body>
 </html>
